# currency-quote

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
backend/: manage.py  pyproject.toml  tox.ini  utils.py
backend/config/: urls.py
backend/config/settings/: base.py  development.py  production.py  testing.py
backend/currencies/: db_repository.py  interfaces.py  models.py  schemas.py  urls.py  use_cases.py  vat_comply_api.py  views.py
backend/currencies/api/: serializers.py  views.py
backend/currencies/docs/: definitions.py  examples.py
backend/currencies/management/commands/: populate_currencies_table.py
backend/currencies/migrations/: 0001_initial.py  0002_rename_representation_currency_code.py
backend/currencies/tests/: test_db_repository.py  test_models.py  test_populate_currencies_table.py  test_use_cases.py  test_vat_comply_api.py
backend/scripts/: update_static_src.py
config/settings/: base.py  development.py  testing.py
docs/: ARCHITECTURE.md  sequence_diagram.txt
frontend/: .gitignore  next.config.js  package-lock.json  package.json
frontend/components/: DateFilter.jsx
frontend/pages/: index.js
