[tool.poetry]
name = "currency-quote"
version = "0.1.0"
description = ""
authors = ["Luiz Longo <longo.luizh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
python-dotenv = "^1.0.0"
requests = "^2.30.0"
pydantic = "^1.10.7"
djangorestframework = "^3.14.0"
holidays = "^0.25"
drf-spectacular = "^0.26.2"

[tool.poetry.group.dev.dependencies]
bumpver = "^2023.1121"
pytest = "^7.3.1"
black = {extras = ["d"], version = "^23.3.0"}
tox = "^4.5.1"
pytest-custom-exit-code = "^0.3.0"
tox-gh-actions = "^3.1.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pre-commit = "^3.3.1"
beautifulsoup4 = "^4.12.2"
responses = "^0.23.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

[tool.black]
line-length = 120
target-version = ['py310']
force-exclude = 'install-poetry.py'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
